fixed some more stretching

--- a/_sass/_landing.scss
+++ b/_sass/_landing.scss
@@ -148,8 +148,6 @@ $applications-button-text-color: #25376B;
     margin-bottom: 70px;
 
     img {
-      width: 60px;
-      height: 60px;
       margin-bottom: 35px;
       @include opacity(0.5);
     }
